# Rustic

./: Cargo.toml
src/: app.rs  file_managment.rs  lib.rs  main.rs  song.rs
src/app/: audio_player.rs  song.rs  web_scraper.rs
