[package]
name = "Rustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.8.1"
alsa-sys = "0.3.1"
dirs = "5.0.1"
eframe = "0.23.0"
egui = "0.23.0"
futures = "0.3.29"
futures-util = "0.3.29"
native-dialog = "0.6.4"
reqwest = "0.11.22"
rodio = "0.17.3"
scraper = "0.18.1"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread"] }
